hphp/hack/test/typecheck/attributes/enum_attribute.php.exp
File "enum_attribute.php", line 4, characters 3-14:
Unbound name: DoesNotExist (an object type) (Naming[2049])
