hphp/hack/test/typecheck/attributes/enum_attribute.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

<<DoesNotExist>>
enum E: int {}
